crates/sdk-tests/tests/template/using_macro_rules_not_allowed.stderr
error: declaring `macro_rules!` inside `#[template]` is not supported.
 --> $DIR/using_macro_rules_not_allowed.rs:3:1
  |
3 | #[template]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `template` (in Nightly builds, run with -Z macro-backtrace for more info)
