crates/sdk-tests/tests/template/using_macro_rules_not_allowed.rs
use svm_sdk::template;

#[template]
mod Template {
    macro_rules! print {
        () => {};
    }
}

fn main() {}
